# Search-Engine-Project

./: CMakeLists.txt  avl_tree.h  document_info.h  main.cpp  searchEngine.cpp  searchEngine.h  text_processor.h
